[package]
name = "material"
description = "A material design color palette for the terminal"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/azorng/material"
readme = "README.md"
keywords = ["cli", "color", "terminal", "palette", "material-design"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]
ratatui = { version = "0.30.0", optional = true }
crossterm = { version = "0.29.0", optional = true }
clipboard = "0.5.0"

[[bin]]
# necessary to avoid including crossterm / ratatui in the lib
name = "material"
required-features = ["cli"]

[features]
cli = ["ratatui", "crossterm"]
